# gent_disagreement_rag

./: .env.test.example  .gitignore  CLAUDE.md  LICENSE  README.md  TESTING_PLAN.md  main.py  pyproject.toml  pytest.ini
.claude/: settings.local.json
docs/: EMBEDDING_SPEED_TEST.md  PARALLEL_PROCESSING_PLAN.md  PIPELINE_ORCHESTRATOR_REFACTORING.md  RESUME_BULLETS.md  RESUME_SKILLS.md  TESTING_PLAN.md  TRANSCRIPT_FORMATTER_IMPROVEMENTS.md
scripts/: README.md  __init__.py  reset_database.py  seed_database.py
scripts/migrations/: 001_initial_schema.sql  002_seed_episodes.sql  __init__.py
src/gent_disagreement_processor/: main.py
src/gent_disagreement_processor/core/: __init__.py  audio_transcriber.py  chat_manager.py  database_manager.py  embedding_service.py  formatter.py  normalizer.py  processor.py  rag_service.py  segment_processor.py  transcript_exporter.py  vector_search.py
src/gent_disagreement_processor/data/processed/: embedding_ready_segments.json  processed_segments.json
src/gent_disagreement_processor/models/: segments.py
src/gent_disagreement_processor/utils/: __init__.py  categorizer.py  chunker.py  data_loader.py  exporter.py
src/gent_disagreement_rag/: main.py
src/gent_disagreement_rag/config/: __init__.py  episodes.json
src/gent_disagreement_rag/core/: __init__.py  audio_transcriber.py  database_manager.py  embedding_service.py  formatter.py  pipeline_orchestrator.py  preprocessor.py  rag_service.py  speaker_summarizer.py  transcript_exporter.py  transcript_fomatter.py  vector_search.py
src/gent_disagreement_rag/data/: __init__.py
src/gent_disagreement_rag/models/: __init__.py  segments.py  summaries.py
src/gent_disagreement_rag/utils/: __init__.py  data_loader.py  exporter.py  reporter.py
tests/: conftest.py
tests/fixtures/: mock_responses.py  sample_transcript.json
tests/unit/: test_audio_transcriber.py
(+4 files in other folders)
