[tool.poetry]
name = "gent-disagreement-rag"
version = "0.1.0"
description = ""
authors = ["Joe Webster <joseph.scott.webster@gmail.com>"]
readme = "README.md"
packages = [{include = "gent_disagreement_rag", from = "src"}]

[tool.poetry.dependencies]
python = ">=3.11,<3.14"
openai = ">=1.97.0,<2.0.0"
psycopg2 = ">=2.9.10,<3.0.0"
python-dotenv = ">=0.9.9,<1.0.0"
deepgram-sdk = "^4.8.1"

[tool.poetry.scripts]
seed-db = "scripts.seed_database:main"
reset-db = "scripts.reset_database:main"

[tool.poetry.group.dev.dependencies]
pytest = "^8.4.2"
pytest-mock = "^3.15.0"
pytest-asyncio = "^1.2.0"
pytest-cov = "^7.0.0"
faker = "^37.6.0"

[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
